[package]
name = "shannon-cli"
version = "0.5.0"
edition = "2024"
authors = ["Ali Raheem <github@shoryuken.com>"]
description = "Visualize Shannon entropy of files"
repository = "https://github.com/ali-raheem/shannon"
license = "MIT"
readme = "README.md"
keywords = ["entropy", "analysis", "security"]
categories = ["command-line-utilities"]

[[bin]]
name = "shannon"
path = "src/main.rs"

[lib]
name = "shannon"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
num-traits = "0.2"
textplots = "0.8.7"